# opencv_simple_template

./: .gitignore  CMakeLists.txt  LICENSE  makefile  vcom.py
src/: main.cpp
